Add smoke tests for PR discovery